samples/_failures_safe/1761423738_b7cb13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8424998.c: In function ‘main’:
./samples/SAFE/__tmp_e8424998.c:162:5: error: expected expression at end of input
  162 |     if (
      |     ^~
./samples/SAFE/__tmp_e8424998.c:162:5: error: expected declaration or statement at end of input
